force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant__c/fields/Assistant_Plant_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Plant_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assistant Plant Manager</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only active user can be selected.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Plants</relationshipName>
    <type>Lookup</type>
</CustomField>