force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant__c/fields/Auth_Country__c.field-meta.xml
<CustomField>
    <fullName>Auth_Country__c</fullName>
    <label>Auth Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>MEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>