force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant__c/fields/Auth_Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>Auth_Plant_Code__c</fullName>
    <label>Auth Plant Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>