force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant__c/fields/Auth_Region__c.field-meta.xml
<CustomField>
    <fullName>Auth_Region__c</fullName>
    <label>Auth Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GWB_Region</valueSetName>
    </valueSet>
</CustomField>