force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant__c/fields/Auth_Sector__c.field-meta.xml
<CustomField>
    <fullName>Auth_Sector__c</fullName>
    <label>Auth Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Auth_Sector</valueSetName>
    </valueSet>
</CustomField>