force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant__c/fields/Auth_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Auth_Site_Name__c</fullName>
    <label>Auth Site Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Arlington</fullName>
            </value>
            <value>
                <fullName>Bay City</fullName>
            </value>
            <value>
                <fullName>Bedford</fullName>
            </value>
            <value>
                <fullName>Bowling Green</fullName>
            </value>
            <value>
                <fullName>Brownstown</fullName>
            </value>
            <value>
                <fullName>CAMI</fullName>
            </value>
            <value>
                <fullName>Defiance</fullName>
            </value>
            <value>
                <fullName>Factory Zero</fullName>
            </value>
            <value>
                <fullName>Fairfax</fullName>
            </value>
            <value>
                <fullName>Flint</fullName>
            </value>
            <value>
                <fullName>Flint Metal</fullName>
            </value>
            <value>
                <fullName>Fort Wayne</fullName>
            </value>
            <value>
                <fullName>Grand Rapids</fullName>
            </value>
            <value>
                <fullName>Kokomo</fullName>
            </value>
            <value>
                <fullName>Lansing Delta Township</fullName>
            </value>
            <value>
                <fullName>Lansing Grand River</fullName>
            </value>
            <value>
                <fullName>Lansing Regional</fullName>
            </value>
            <value>
                <fullName>Lockport</fullName>
            </value>
            <value>
                <fullName>Marion</fullName>
            </value>
            <value>
                <fullName>Moraine (DMAX)</fullName>
            </value>
            <value>
                <fullName>Orion</fullName>
            </value>
            <value>
                <fullName>Oshawa</fullName>
            </value>
            <value>
                <fullName>Parma</fullName>
            </value>
            <value>
                <fullName>Pontiac</fullName>
            </value>
            <value>
                <fullName>Ramos Arizpe</fullName>
            </value>
            <value>
                <fullName>Rochester</fullName>
            </value>
            <value>
                <fullName>Romulus</fullName>
            </value>
            <value>
                <fullName>Saginaw</fullName>
            </value>
            <value>
                <fullName>San Luis Potosi</fullName>
            </value>
            <value>
                <fullName>Silao</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>