force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant__c/fields/Default_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Product_Type__c</fullName>
    <label>Default Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Type</valueSetName>
    </valueSet>
</CustomField>