force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant__c/fields/Default_Program_Index__c.field-meta.xml
<CustomField>
    <fullName>Default_Program_Index__c</fullName>
    <description>PR1064302-324</description>
    <label>Default Program Index</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Program_Index</valueSetName>
    </valueSet>
</CustomField>