force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant__c/fields/Finance_Sector_Lead__c.field-meta.xml
<CustomField>
    <fullName>Finance_Sector_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Sector Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FinanceSector</relationshipName>
    <type>Lookup</type>
</CustomField>