force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant__c/fields/MVP__c.field-meta.xml
<CustomField>
    <fullName>MVP__c</fullName>
    <description>PR1064302-662 - This field will hold the MVP names to be used for the reports.</description>
    <label>MVP</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>