force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant__c/fields/Plant_Admin__c.field-meta.xml
<CustomField>
    <fullName>Plant_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Admin</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only active user can be selected.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Plant_Admins</relationshipName>
    <type>Lookup</type>
</CustomField>