force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant__c/fields/Vehicle_Brand__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Brand__c</fullName>
    <label>Vehicle Brand For Polymers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>MONTANA</fullName>
            </value>
            <value>
                <fullName>TRACKER</fullName>
            </value>
            <value>
                <fullName>BRIGHTDROP 400</fullName>
            </value>
            <value>
                <fullName>BRIGHTDROP 600</fullName>
            </value>
            <value>
                <fullName>SILVERADO</fullName>
            </value>
            <value>
                <fullName>SILVERADO HD</fullName>
            </value>
            <value>
                <fullName>ENVISION</fullName>
            </value>
            <value>
                <fullName>AVEO</fullName>
            </value>
            <value>
                <fullName>CAPTIVA</fullName>
            </value>
            <value>
                <fullName>GROOVE</fullName>
            </value>
            <value>
                <fullName>N400 MAX</fullName>
            </value>
            <value>
                <fullName>ONIX</fullName>
            </value>
            <value>
                <fullName>PICKUP-D</fullName>
            </value>
            <value>
                <fullName>SV70</fullName>
            </value>
            <value>
                <fullName>E260S+</fullName>
            </value>
            <value>
                <fullName>EV70</fullName>
            </value>
            <value>
                <fullName>F510S</fullName>
            </value>
            <value>
                <fullName>LCF DSL-JP</fullName>
            </value>
            <value>
                <fullName>ENCORE GX</fullName>
            </value>
            <value>
                <fullName>ENVISTA</fullName>
            </value>
            <value>
                <fullName>TRAILBLAZER</fullName>
            </value>
            <value>
                <fullName>TRAX</fullName>
            </value>
            <value>
                <fullName>OPTIQ</fullName>
            </value>
            <value>
                <fullName>BLAZER</fullName>
            </value>
            <value>
                <fullName>BLAZER EV</fullName>
            </value>
            <value>
                <fullName>EQUINOX</fullName>
            </value>
            <value>
                <fullName>EQUINOX EV</fullName>
            </value>
            <value>
                <fullName>SIERRA</fullName>
            </value>
            <value>
                <fullName>TERRAIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>