force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant__c/validationRules/Plant_Name_cannot_be_modified.validationRule-meta.xml
<ValidationRule>
    <fullName>Plant_Name_cannot_be_modified</fullName>
    <active>true</active>
    <description>Prevents modification of the Auth Plant Name field once it has been populated.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(PRIORVALUE(Name))),
    ISCHANGED(Name))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Auth Plant Name cannot be modified once it has been populated.</errorMessage>
</ValidationRule>