force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Auth_Region__c</columns>
    <columns>Auth_Country__c</columns>
    <columns>Auth_Site_Name__c</columns>
    <columns>NAME</columns>
    <columns>Auth_Plant_Code__c</columns>
    <columns>Plant_Admin__c</columns>
    <columns>Finance_Sector_Lead__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>