force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant__c/listViews/All_Active.listView-meta.xml
<ListView>
    <fullName>All_Active</fullName>
    <columns>NAME</columns>
    <columns>Auth_Plant_Code__c</columns>
    <columns>Plant_Admin__c</columns>
    <columns>MVP__c</columns>
    <columns>Auth_Region__c</columns>
    <columns>Auth_Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active Plants</label>
</ListView>